@@ -559,7 +559,7 @@
           <bool>true</bool>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>1</number>
          </property>
          <widget class="QWidget" name="tabSrcFiles">
           <property name="autoFillBackground">
@@ -952,7 +952,7 @@
                    </widget>
                   </item>
                   <item row="1" column="1">
-                   <widget class="QgsProjectionSelectionWidget" name="crsSelectionWidget">
+                   <widget class="QgsProjectionSelectionWidget" name="crsSelectionWidget" native="true">
                     <property name="enabled">
                      <bool>true</bool>
                     </property>
@@ -1186,6 +1186,12 @@
                       <property name="suffix">
                        <string>px</string>
                       </property>
+                      <property name="minimum">
+                       <number>1</number>
+                      </property>
+                      <property name="maximum">
+                       <number>999999999</number>
+                      </property>
                      </widget>
                     </item>
                     <item>
@@ -1205,6 +1211,12 @@
                       </property>
                       <property name="suffix">
                        <string>px</string>
+                      </property>
+                      <property name="minimum">
+                       <number>1</number>
+                      </property>
+                      <property name="maximum">
+                       <number>999999999</number>
                       </property>
                      </widget>
                     </item>
@@ -1404,7 +1416,7 @@
                      </widget>
                     </item>
                     <item>
-                     <widget class="QgsFileWidget" name="mQgsFileWidget">
+                     <widget class="QgsFileWidget" name="mQgsFileWidget" native="true">
                       <property name="enabled">
                        <bool>true</bool>
                       </property>
@@ -1414,13 +1426,13 @@
                         <verstretch>0</verstretch>
                        </sizepolicy>
                       </property>
-                      <property name="fileWidgetButtonVisible">
+                      <property name="fileWidgetButtonVisible" stdset="0">
                        <bool>true</bool>
                       </property>
-                      <property name="useLink">
+                      <property name="useLink" stdset="0">
                        <bool>false</bool>
                       </property>
-                      <property name="defaultRoot">
+                      <property name="defaultRoot" stdset="0">
                        <string/>
                       </property>
                      </widget>
